Bug 1966357 - Wrap the usage of an image on a media query to appease browser_parsable_css.

--- a/browser/themes/shared/preferences/applications.css
+++ b/browser/themes/shared/preferences/applications.css
@@ -17,7 +17,9 @@ menuitem[appHandlerIcon="ask"] > .menu-icon {
 richlistitem[appHandlerIcon="save"] .actionIcon,
 richlistitem[appHandlerIcon="save"] .actionsMenu::part(icon),
 menuitem[appHandlerIcon="save"] > .menu-icon {
-  content: url("chrome://browser/skin/preferences/saveFile.png");
+  @media not (-moz-platform: linux) {
+    content: url("chrome://browser/skin/preferences/saveFile.png");
+  }
   @media (-moz-platform: linux) {
     content: image-set(
       "moz-icon://stock/document-save?size=16" 1x,
